2002-01-17  Jody Goldberg <jody@gnome.org>

	* ms-obj.c (ms_object_attr_new_expr) : new.
	(ms_object_attr_destroy) : handle expressions.
	(ms_obj_read_biff8_obj) : use the expression parser for
	  GR_CHECKBOX_FORMULA.

	* ms-formula-read.c (getRefV7) : remove the pointless malloc/free.
	(getRefV8) : ditto.
	(make_inter_sheet_ref) : delete.
	(make_inter_sheet_ref_v7) : ditto.

	* ms-excel-read.c (ms_sheet_realize_obj) : add support for a
	  checkbox's link.  Needs to be done here, AFTER being assigned to a
	  sheet.
	(ms_excel_workboot_get_externsheets) : renamed from
	  biff_get_externsheet_name, and simplified.

2002-01-14  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (ms_excel_parse_formula) : fix support for
	  importing local 3d references, external 3d is still not supported.

2002-01-15  Jody Goldberg <jody@gnome.org>

	* Release 1.0.2

2002-01-13  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_tab_color) : turn down the debug
	  level.

2002-01-12  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (ms_excel_read_dv) : reorg slightly and enable.
	* ms-excel-read.c (ms_excel_read_tab_color) : new function.
	(ms_excel_read_sheet) : called from here.

2002-01-11  Jody Goldberg <jody@gnome.org>

	* ms-formula-read.c (ms_excel_parse_formula) : fix area 3d and its
	  missing break.

2002-01-06  Jody Goldberg <jody@gnome.org>

	* Release 1.0.1

2002-01-04  Jody Goldberg <jody@gnome.org>

	* ms-chart.c (excel_chart_series_write_xml) : more protection for
	  missing series.

2002-01-03  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* ms-escher.c (ms_escher_blip_new) : cast to fix signedness warning.
	* ms-excel-read.c (biff_get_text) : likewise
	* ms-excel-read.c (get_string) : likewise
	* ms-excel-write.c (write_bits) : char -> guint8.
	* ms-excel-write.c (write_value) : ditto
	* ms-chart.c (excel_chart_series_write_xml) : cast / type change
	* ms-chart.c (BC_R) : ditto
	* ms-chart.c (BC_R(*)) : ditto
	* ms-chart.c (ms_excel_chart) : ditto
